--- a/assets/css/key_in.css
+++ b/assets/css/key_in.css
@@ -10,7 +10,8 @@
 .title {
     font-size: 20px;
     font-weight: bold;
-    padding-bottom:20px;
+    padding-top:20px;
+    padding-bottom:10px;
 }
 .footer {
     padding-top:50px;
