fix ความประสงค์ checkbox ข้อความตกบรรทัด

--- a/assets/css/step.css
+++ b/assets/css/step.css
@@ -38,3 +38,11 @@
     line-height: 1.428571429;
     border-radius: 15px;
 }
+
+.text-wrap{
+    display: flex;
+}
+
+.text-wrap > label{
+    margin-left: 5px;
+}
